--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "author": "Jack Smith",
     "name": "Jack's MouseHunt Helper",
     "description": "This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
-    "version": "18.3.31",
+    "version": "18.4.8",
     "icons": {
         "16": "images/icon16.png",
         "48": "images/icon48.png",
@@ -31,6 +31,7 @@
         "scripts/main.js",
         "third_party/tsitus/crebookmarklet",
         "third_party/tsitus/setupbookmarklet",
+        "third_party/tsitus/bookmarkletloader",
         "images/icon128.png"
     ],
 
