--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,7 @@
     ],
 
     "content_scripts": [{
-        "all_frames" : true,
+        "all_frames" : false,
         "matches": ["*://www.mousehuntgame.com/*"],
         "js": ["scripts/content.js"]
     }],
