Revert change to `all_frames` setting
because with `all_frames: false` or omitted, the extension doesn't load on `apps.facebook.com/mousehunt`

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,7 @@
     ],
 
     "content_scripts": [{
-        "all_frames" : false,
+        "all_frames" : true,
         "matches": ["*://www.mousehuntgame.com/*"],
         "js": ["scripts/content.js"]
     }],
