--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
-    "author": "Jack Smith",
-    "name": "Jack's MouseHunt Helper",
-    "description": "This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
-    "version": "19.3.15",
+    "author": "MHCT",
+    "name": "MHCT (Jacks) MouseHunt Helper",
+    "description": "Previously Jacks MouseHunt Helper, now MouseHunt Community Tools (MHCT) Helper. This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
+    "version": "19.5.4",
     "icons": {
         "16": "images/icon16.png",
         "48": "images/icon48.png",
