--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
     "manifest_version": 2,
     "author": "MHCT",
     "name": "MHCT (Jacks) MouseHunt Helper",
-    "description": "Previously Jacks MouseHunt Helper, now MouseHunt Community Tools (MHCT) Helper. This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
+    "short_name": "MHCT Helper",
+    "description": "This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
     "version": "19.5.4",
     "icons": {
         "16": "images/icon16.png",
