--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2,
     "author": "MHCT",
-    "name": "MHCT (Jacks) MouseHunt Helper",
+    "name": "MHCT  MouseHunt Helper",
     "short_name": "MHCT Helper",
-    "description": "This extension provides useful links and tracks MouseHunt horn calls for tools like rate calculators.",
+    "description": "This extension provides useful links and tracks MouseHunt game data for tools like rate calculators. Worked on by Jack, Tsitu, Tehhowch, and others too.",
     "version": "19.11.3",
     "icons": {
         "16": "images/icon16.png",
