--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
     "author": "MHCT",
     "name": "MHCT  MouseHunt Helper",
     "short_name": "MHCT Helper",
-    "description": "Provides useful links and tracks MouseHunt game data for tools like rate calculators. Worked on by Jack, Tsitu, Tehhowch, and others.",
+    "description": "Provides useful links and tracks MouseHunt game data for tools like rate calculators. Worked on by Tsitu, Tehhowch, Jack and others",
     "version": "19.12.23",
     "icons": {
         "16": "images/icon16.png",
