feat: add lint test script
`npm run lint`

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "url": "https://github.com/mh-community-tools/mh-helper-extension/issues"
   },
   "scripts": {
+    "lint": "eslint src",
     "test": "echo 'Nothing to see here, move along'"
   },
   "private": true,
