--- a/.editorconfig
+++ b/.editorconfig
@@ -11,4 +11,16 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
+[*.{yml,yaml}]
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+
+[*.md]
+indent_size = 2
+indent_style = space
+trim_trailing_whitespace = false
+
 # TODO: settings for .html files, .css, etc.
