--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to Chrome and FF webstores
+name: CD Update version and publish to stores
 on:
   workflow_dispatch:
     inputs:
@@ -6,7 +6,7 @@ on:
         description: 'Please input version number in this format(YY.MM.DD): 21.07.31'
         required: true
 jobs:
-  pull-zip-publish:
+  CD:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -15,20 +15,15 @@ jobs:
           cd ${{ github.workspace }}
           ls src/
       - name: Update version
-        run: sed -E -i "" "s|(\"version\":).*|\1 \"${{ github.event.inputs.newAddonVersion }}\",|" src/manifest.json
+        run: sed -i"" -e "s|\"version\":.*|\"version\": \"${{ github.event.inputs.newAddonVersion }}\",|" src/manifest.json
       - name: Output manifest
         run: cat src/manifest.json
-      # - name: switching from HTTPS to SSH
+      # - name: Commit new version
       #   run: git remote set-url origin ${{ secrets.ssh }}
-      # - name: check for changes
       #   run: git status
-      # - name: stage changed files
       #   run: git add .
-      # - name: commit changed files
       #   run: git commit -m "Auto updating TODO.txt"
-      # - name: fetch from master
       #   run: git fetch origin master
-      # - name: push code to master
       #   run: git push origin HEAD:master
       - name: Zip it! zip it good!
         run: mkdir build && cd src && zip -r ../build/release.zip .
