--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v2
       - run: |
           cd ${{ github.workspace }}
-          ls src/
+          ls -la src/
       - name: Update version
-        run: sed -i"" -e "s|\"version\":.*|\"version\": \"${{ github.event.inputs.newAddonVersion }}\",|" src/manifest.json
+        run: sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' src/manifest.yml
       - name: Output manifest
         run: cat src/manifest.json
       # - name: Commit new version
