--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,8 @@ jobs:
           cd ${{ github.workspace }}
           ls -la src/
       - name: Update version
-        run: sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' src/manifest.yml
+        run: |
+          sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' src/manifest.yml
       - name: Output manifest
         run: cat src/manifest.json
       # - name: Commit new version
