--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,13 @@ jobs:
         uses: actions/checkout@v2
       - run: |
           cd ${{ github.workspace }}
-          ls -la src/
+          ls -la
       - name: Update version
         run: |
+          pwd
+          cd src/
+          pwd
+          ls -la
           sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' src/manifest.yml
       - name: Output manifest
         run: cat src/manifest.json
