--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,9 +25,7 @@ jobs:
       #   run: git push origin HEAD:master
       - name: Zip it! zip it good!
         run: |
-          cd ../
-          mkdir build
-          cd src
+          mkdir ../build
           zip -r ../build/release.zip .
           pwd
           ls -la ../build/release.zip
