--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
     "author": "MHCT",
     "name": "MHCT  MouseHunt Helper",
     "short_name": "MHCT Helper",
-    "description": "Provides useful links and tracks MouseHunt game data for tools like rate calculators. Worked on by Tsitu, Tehhowch, Aardwolf, Jack and others",
+    "description": "Provides useful links and tracks MH game data for tools like rate calculators. Made by Tsitu, Tehhowch, Aardwolf, Jack and others.",
     "version": "21.4.15",
     "icons": {
         "16": "images/icon16.png",
