--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,9 +3,9 @@ on:
   workflow_dispatch:
     inputs:
       newAddonVersion:
-        description: 'Please input version number in this format(YY.MM.DD.XX): 21.07.31.01'
+        description: 'Please input version number in this format(YY.MM.DD.XX): 21.12.31.01'
         required: true
-        default: "$(date +'%y.%m.%d.01')"
+        default: "date::$(date +'%y.%m.%d.01')"
 jobs:
   CD:
     runs-on: ubuntu-latest
