Updating publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,12 +23,11 @@ jobs:
 
       - name: Commit new version
         run: |
-          # run: git remote set-url origin ${{ secrets.ssh }}
-          git status
-          git diff
+          git config --global user.name 'CD Publish Job'
+          git config --global user.email 'noreply@users.noreply.github.com'
           git add src/manifest.json
-          git commit -m "Auto updating version"
-          git push origin HEAD:master
+          git commit -m "Automated version update"
+          git push
       - name: Zip it! zip it good!
         run: |
           cd ${{ github.workspace }}/src/
