--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
           pwd
           ls -la ../build/release.zip
       - name: Upload new release zip to Chrome Webstore
-        uses: Klemensas/chrome-extension-upload-action@v1.3
+        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
         with:
           refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
           client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
