Updating publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,9 +46,8 @@ jobs:
           # file-name: './build/release.zip'
           # app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
           # publish: false
+      - run: mv build/release.zip build/release.xpi
       - name: Upload new release zip to Firefox Webstore
-        run: |
-          mv build/release.zip build/release.xpi
         uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
         with:
           uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
