Updating publish workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           cmd: lint
           source: src
           channel: listed
+          verbose: true
   lint:
     runs-on: ubuntu-latest
 
