--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,22 +37,20 @@ jobs:
           zip -r ../build/release.zip .
           pwd
           ls -la ../build/release.zip
-      # - name: Upload new release zip to Chrome Webstore
-        # uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
-        # with:
-          # refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
-          # client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
-          # client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-          # file-name: './build/release.zip'
-          # app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
-          # publish: false
-      - name: Move zip to xpi
+      - name: Upload new release zip to Chrome Webstore
+        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
+        with:
+          refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+          client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
+          file-name: './build/release.zip'
+          app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
+          publish: true
+      - name: Rename zip to xpi
         run: |
           mv build/release.zip build/release.xpi
           ls -la build/release.xpi
-          ls -la src/manifest.json
-          cat src/manifest.json
-      - name: Upload new release zip to Firefox Webstore
+      - name: Upload new release xpi to Firefox Webstore
         uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
         with:
           uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
