--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Check out repository code
         uses: actions/checkout@v2
+        # with:
+        #   fetch-depth: '0'
 
       - name: Pull in latest Tsitus tools
         run: |
@@ -32,13 +34,6 @@ jobs:
           curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-setup-items.min.js
           ls -la
 
-      - name: Update version
-        run: |
-          cd ${{ github.workspace }}/src/
-          echo "New Version: ${{ github.event.inputs.newAddonVersion }}"
-          sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' manifest.json
-          cat manifest.json
-
       - name: Check if there are changes
         id: changes
         uses: UnicornGlobal/has-changes-action@v1.0.11
@@ -49,42 +44,55 @@ jobs:
           git config --global user.name 'CD Publish Job'
           git config --global user.email 'CD_Publish_Job@users.noreply.github.com'
           git add src/manifest.json
-          git commit -m "Automated version update"
+          git commit -m "Automated tsitus tools update"
           git push
-          git tag "v${{ github.event.inputs.newAddonVersion }}"
-          git push --tags
 
-      - name: Zip it! zip it good!
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.26.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DRY_RUN: true
+          DEFAULT_BUMP: "patch"
+
+      - name: Update version
         run: |
           cd ${{ github.workspace }}/src/
-          mkdir ../build
-          zip -r ../build/release.zip .
-          pwd
-          ls -la ../build/release.zip
-          cd ../
+          echo "New Version: ${{ github.event.inputs.newAddonVersion }}"
+          sed -i'' -e 's|"version":.*|"version": "${{ github.event.inputs.newAddonVersion }}",|' manifest.json
+          cat manifest.json
 
-      - name: Upload new release zip to Chrome Webstore
-        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
-        with:
-          refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
-          client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
-          client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-          file-name: './build/release.zip'
-          app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
-          publish: true
-
-      - name: Rename zip to xpi
-        run: |
-          mv build/release.zip build/release.xpi
-          ls -la build/release.xpi
-
-      - name: Upload new release xpi to Firefox Webstore
-        uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
-        with:
-          uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
-          xpi: ./build/release.xpi
-          manifest: ./src/manifest.json
-          api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
-          api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
-        env:
-          VERSION: ${{ github.event.inputs.newAddonVersion }}
+      # - name: Zip it! zip it good!
+      #   run: |
+      #     cd ${{ github.workspace }}/src/
+      #     mkdir ../build
+      #     zip -r ../build/release.zip .
+      #     pwd
+      #     ls -la ../build/release.zip
+      #     cd ../
+      #
+      # - name: Upload new release zip to Chrome Webstore
+      #   uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
+      #   with:
+      #     refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+      #     client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
+      #     client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
+      #     file-name: './build/release.zip'
+      #     app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
+      #     publish: true
+      #
+      # - name: Rename zip to xpi
+      #   run: |
+      #     mv build/release.zip build/release.xpi
+      #     ls -la build/release.xpi
+      #
+      # - name: Upload new release xpi to Firefox Webstore
+      #   uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
+      #   with:
+      #     uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
+      #     xpi: ./build/release.xpi
+      #     manifest: ./src/manifest.json
+      #     api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
+      #     api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
+      #   env:
+      #     VERSION: ${{ github.event.inputs.newAddonVersion }}
