fetching more commits on CD pipeline

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Check out repository code
         uses: actions/checkout@v2
-        # with:
-        #   fetch-depth: '0'
+        with:
+          fetch-depth: '0'
 
       - name: Pull in latest Tsitus tools
         run: |
