--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,8 @@ jobs:
 
       - name: Check out repository code
         uses: actions/checkout@v2
-        # with:
-        #   fetch-depth: '0'
+        with:
+          fetch-depth: '0'
 
       - name: Pull in latest Tsitus tools
         run: |
@@ -47,53 +47,53 @@ jobs:
           git commit -m "Automated tsitus tools update"
           git push
 
-      - name: Bump version and push tag
-        id: bump_version
-        uses: anothrNick/github-tag-action@1.26.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # WITH_V: false
-          DRY_RUN: true
-          DEFAULT_BUMP: "patch"
+      - name: Bump version
+        run: |
+          echo "NEW_CREATED_VERSION=$(git describe --tags `git rev-list --tags --max-count=1` | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g' | sed 's/v//')" >> $GITHUB_ENV
+
+      - name: Tag with new version
+        run: |
+          git tag ${{ env.NEW_CREATED_VERSION }}
+          git push --tags
 
       - name: Update version
         run: |
           cd ${{ github.workspace }}/src/
-          echo "New Version: ${{ steps.bump_version.outputs.tag }}"
-          sed -i'' -e 's|"version":.*|"version": "${{ steps.bump_version.outputs.tag }}",|' manifest.json
+          echo "New Version: ${{ env.NEW_CREATED_VERSION }}"
+          sed -i'' -e 's|"version":.*|"version": "${{ env.NEW_CREATED_VERSION }}",|' manifest.json
           cat manifest.json
 
-      # - name: Zip it! zip it good!
-      #   run: |
-      #     cd ${{ github.workspace }}/src/
-      #     mkdir ../build
-      #     zip -r ../build/release.zip .
-      #     pwd
-      #     ls -la ../build/release.zip
-      #     cd ../
-      #
-      # - name: Upload new release zip to Chrome Webstore
-      #   uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
-      #   with:
-      #     refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
-      #     client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
-      #     client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-      #     file-name: './build/release.zip'
-      #     app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
-      #     publish: true
-      #
-      # - name: Rename zip to xpi
-      #   run: |
-      #     mv build/release.zip build/release.xpi
-      #     ls -la build/release.xpi
-      #
-      # - name: Upload new release xpi to Firefox Webstore
-      #   uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
-      #   with:
-      #     uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
-      #     xpi: ./build/release.xpi
-      #     manifest: ./src/manifest.json
-      #     api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
-      #     api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
-      #   env:
-      #     VERSION: ${{ github.event.inputs.newAddonVersion }}
+      - name: Zip it! zip it good!
+        run: |
+          cd ${{ github.workspace }}/src/
+          mkdir ../build
+          zip -r ../build/release.zip .
+          pwd
+          ls -la ../build/release.zip
+          cd ../
+
+      - name: Upload new release zip to Chrome Webstore
+        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
+        with:
+          refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+          client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
+          file-name: './build/release.zip'
+          app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
+          publish: true
+
+      - name: Rename zip to xpi
+        run: |
+          mv build/release.zip build/release.xpi
+          ls -la build/release.xpi
+
+      - name: Upload new release xpi to Firefox Webstore
+        uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
+        with:
+          uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
+          xpi: ./build/release.xpi
+          manifest: ./src/manifest.json
+          api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
+          api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
+        env:
+          VERSION: ${{ env.NEW_CREATED_VERSION }}
