--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,7 @@ jobs:
     name: "Web Ext Lint"
     runs-on: ubuntu-latest
     steps:
-      - name: "Checkout"
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: "web-ext lint"
         uses: kewisch/action-web-ext@v1
@@ -30,6 +29,7 @@ jobs:
           source: src
           channel: listed
           verbose: true
+
   lint:
     runs-on: ubuntu-latest
 
@@ -39,7 +39,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
     - run: npx eslint src
@@ -53,7 +53,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
     - name: Install dependencies
